<resources>
    <string name="app_name">Gaweee Android Apps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Profile</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_checkin">Check In</string>
    <string name="menu_checkout">Check Out</string>
    <string name="dialog_checkout">Check Out</string>
    <string name="dialog_checkin">Check In</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_report">Report</string>
    <string name="menu_maps_report">Maps Report</string>
    <string name="menu_table_report">Table Report</string>

    <string name="date">Date</string>
    <string name="hint_date">2 Dec 2020</string>
    <string name="hint_check_in">09:00</string>
    <string name="hint_check_out">17:00</string>
    <string name="hint_ex_date">6–10–2020</string>
    <string name="versi">versi</string>
    <string name="version">0.0.0</string>
    <string name="logo">logo</string>
    <string name="error_password">Password must contain at least 8 characters.</string>

    <string name="notes">Notes :</string>
    <string name="location">Location:</string>
    <string name="submit">Submit</string>
    <string name="location_address">PT. EBconnect, Graha Sentana Lt.5 Jl.Buncit Raya No.2 DKI Jakarta,
        Jakarta Selatan, Pancoran 12760 Indonesia</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
</resources>