<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_menu_checkin"
            android:title="@string/menu_checkin" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_menu_checkout"
            android:title="@string/menu_checkout" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="@string/menu_report">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_maps_report"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_maps_report" />
                <item
                    android:id="@+id/nav_table_report"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_table_report" />
            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/action_login_short" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>