<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_checkin">

    <fragment
        android:id="@+id/nav_checkin"
        android:name="com.ebc.gaweeeandroidapps.ui.checkin.CheckInFragment"
        android:label="@string/menu_checkin"
        tools:layout="@layout/fragment_check_in" />

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.ebc.gaweeeandroidapps.ui.checkout.CheckOutFragment"
        android:label="@string/menu_checkout"
        tools:layout="@layout/fragment_check_out" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ebc.gaweeeandroidapps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_maps_report"
        android:name="com.ebc.gaweeeandroidapps.ui.mapsreport.MapsReportFragment"
        android:label="@string/menu_maps_report"
        tools:layout="@layout/fragment_maps_report" />

    <fragment
        android:id="@+id/nav_table_report"
        android:name="com.ebc.gaweeeandroidapps.ui.tablereport.TableReportFragment"
        android:label="@string/menu_table_report"
        tools:layout="@layout/fragment_table_report" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.ebc.gaweeeandroidapps.ui.tablereport.TableReportFragment"
        android:label="@string/menu_table_report"
        tools:layout="@layout/fragment_table_report" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ebc.gaweeeandroidapps.ui.tablereport.TableReportFragment"
        android:label="@string/menu_table_report"
        tools:layout="@layout/fragment_table_report" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.ebc.gaweeeandroidapps.ui.tablereport.TableReportFragment"
        android:label="@string/menu_table_report"
        tools:layout="@layout/fragment_table_report" />

</navigation>