<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tablereport.TableReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDatePickerStart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_ex_date"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_calendar" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDatePickerEnd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_ex_date"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_calendar" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDatePickerEnd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:stretchColumns="1,2,3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_column="1"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_date"
                            android:padding="10dp"
                            android:text="@string/date"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_column="2"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_check_in"
                            android:padding="10dp"
                            android:text="@string/menu_checkin"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_column="3"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_check_out"
                            android:padding="10dp"
                            android:text="@string/menu_checkout"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>