<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:stretchColumns="1,2,3">

        <TableRow>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="110dp"
                android:layout_column="1"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:fontFamily="@font/quicksand"
                android:gravity="center_horizontal"
                android:hint="@string/hint_date"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCheckIn"
                android:layout_width="100dp"
                android:layout_column="2"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:fontFamily="@font/quicksand"
                android:gravity="center_horizontal"
                android:hint="@string/hint_check_in"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCheckOut"
                android:layout_width="100dp"
                android:layout_column="3"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="1dp"
                android:background="@color/white"
                android:fontFamily="@font/quicksand"
                android:gravity="center_horizontal"
                android:hint="@string/hint_check_out"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</ScrollView>

